// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderSvg > matches the snapshot for three-tier with the fake engine 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 440 88" width="440" height="88" data-orrery="1">
<title>Three tier</title>
<style>.group-box{fill:#e2e8f0;fill-opacity:.35;stroke:#cbd5e1;stroke-width:1.5}
.group-region .group-box{stroke-dasharray:8 6}
.group-zone .group-box{stroke-dasharray:3 5}
.group-cluster .group-box{stroke:#94a3b8}
.group-boundary .group-box{stroke:#dc2626;stroke-dasharray:6 6;fill:none}
.group-label{font:600 11px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#475569;letter-spacing:.06em;text-transform:uppercase}
.node-box{fill:#ffffff;stroke:#64748b;stroke-width:1.5}
.node-external .node-box{stroke-dasharray:5 4;fill:#f8fafc}
.node-state-failed .node-box{fill:#fef2f2;stroke:#dc2626;stroke-width:2;animation:orrery-pulse 1.2s linear infinite}
.node-state-failed .node-label{fill:#991b1b}
.node-state-degraded .node-box{fill:#fffbeb;stroke:#d97706;stroke-width:2}
.node-state-degraded .node-label{fill:#92400e}
.node-state-off{opacity:.45}
.node-state-off .node-box{stroke-dasharray:4 4}
.glyph{fill:none;stroke:#475569;stroke-width:1.5;stroke-linejoin:round;stroke-linecap:round}
.glyph-text{font:600 13px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#475569;text-anchor:middle;dominant-baseline:central}
.node-label{font:500 14px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#0f172a;text-anchor:middle;dominant-baseline:central}
.edge{fill:none;stroke:#94a3b8;stroke-width:1.5}
.edge-async{stroke-dasharray:6 5}
.edge-replication{stroke-dasharray:2 4}
.edge-dataflow{stroke-width:3}
.flow{fill:none;stroke:#2563eb;stroke-linecap:round;stroke-dasharray:6 10;animation:orrery-flow 1s linear infinite}
.edge-label{font:12px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#475569;text-anchor:middle;dominant-baseline:central;paint-order:stroke;stroke:#ffffff;stroke-width:5px;stroke-linejoin:round}
@keyframes orrery-flow{to{stroke-dashoffset:-16}}
@keyframes orrery-pulse{0%{stroke-opacity:1}50%{stroke-opacity:0.4}100%{stroke-opacity:1}}</style>
<defs><marker id="arrow" viewBox="0 0 12 12" refX="11" refY="6" markerWidth="12" markerHeight="12" markerUnits="userSpaceOnUse" orient="auto"><path d="M0 0L12 6L0 12z" fill="#94a3b8"/></marker></defs>
<g class="groups">

</g>
<g class="edges">
<path class="edge edge-sync" data-edge="web->api" data-kind="sync" d="M100 44 L180 44" marker-end="url(#arrow)"/>
<path class="flow" data-flow="web->api" data-load="0.8" d="M100 44 L168 44" style="stroke-width:3.9;animation-duration:1s"/>
<text class="edge-label" x="140" y="44">HTTPS</text>
<path class="edge edge-sync" data-edge="api->db" data-kind="sync" d="M260 44 L340 44" marker-end="url(#arrow)"/>
<path class="flow" data-flow="api->db" data-load="0.4" d="M260 44 L328 44" style="stroke-width:2.7;animation-duration:2s"/>
</g>
<g class="nodes">
<g class="node node-service" data-node="web" data-kind="service" data-state="on" transform="translate(20 20)">
<rect class="node-box" width="80" height="48" rx="8"/>
<text class="node-label" x="40" y="24">Web</text>
</g>
<g class="node node-service" data-node="api" data-kind="service" data-state="on" transform="translate(180 20)">
<rect class="node-box" width="80" height="48" rx="8"/>
<text class="node-label" x="40" y="24">API</text>
</g>
<g class="node node-service" data-node="db" data-kind="service" data-state="on" transform="translate(340 20)">
<rect class="node-box" width="80" height="48" rx="8"/>
<text class="node-label" x="40" y="24">DB</text>
</g>
</g>
</svg>
"
`;

exports[`renderSvg: groups, kinds, edge kinds > matches the snapshot for grouped with the fake engine 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1095 176" width="1095" height="176" data-orrery="1">
<title>Grouped three tier</title>
<style>.group-box{fill:#e2e8f0;fill-opacity:.35;stroke:#cbd5e1;stroke-width:1.5}
.group-region .group-box{stroke-dasharray:8 6}
.group-zone .group-box{stroke-dasharray:3 5}
.group-cluster .group-box{stroke:#94a3b8}
.group-boundary .group-box{stroke:#dc2626;stroke-dasharray:6 6;fill:none}
.group-label{font:600 11px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#475569;letter-spacing:.06em;text-transform:uppercase}
.node-box{fill:#ffffff;stroke:#64748b;stroke-width:1.5}
.node-external .node-box{stroke-dasharray:5 4;fill:#f8fafc}
.node-state-failed .node-box{fill:#fef2f2;stroke:#dc2626;stroke-width:2;animation:orrery-pulse 1.2s linear infinite}
.node-state-failed .node-label{fill:#991b1b}
.node-state-degraded .node-box{fill:#fffbeb;stroke:#d97706;stroke-width:2}
.node-state-degraded .node-label{fill:#92400e}
.node-state-off{opacity:.45}
.node-state-off .node-box{stroke-dasharray:4 4}
.glyph{fill:none;stroke:#475569;stroke-width:1.5;stroke-linejoin:round;stroke-linecap:round}
.glyph-text{font:600 13px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#475569;text-anchor:middle;dominant-baseline:central}
.node-label{font:500 14px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#0f172a;text-anchor:middle;dominant-baseline:central}
.edge{fill:none;stroke:#94a3b8;stroke-width:1.5}
.edge-async{stroke-dasharray:6 5}
.edge-replication{stroke-dasharray:2 4}
.edge-dataflow{stroke-width:3}
.flow{fill:none;stroke:#2563eb;stroke-linecap:round;stroke-dasharray:6 10;animation:orrery-flow 1s linear infinite}
.edge-label{font:12px system-ui,-apple-system,"Segoe UI",Roboto,sans-serif;fill:#475569;text-anchor:middle;dominant-baseline:central;paint-order:stroke;stroke:#ffffff;stroke-width:5px;stroke-linejoin:round}
@keyframes orrery-flow{to{stroke-dashoffset:-16}}
@keyframes orrery-pulse{0%{stroke-opacity:1}50%{stroke-opacity:0.4}100%{stroke-opacity:1}}</style>
<defs><marker id="arrow" viewBox="0 0 12 12" refX="11" refY="6" markerWidth="12" markerHeight="12" markerUnits="userSpaceOnUse" orient="auto"><path d="M0 0L12 6L0 12z" fill="#94a3b8"/></marker></defs>
<g class="groups">
<g class="group group-region" data-group="region">
<rect class="group-box" x="337" y="12" width="738" height="144" rx="10"/>
<text class="group-label" x="349" y="28">us-east-1</text>
</g>
<g class="group group-tier" data-group="app">
<rect class="group-box" x="349" y="48" width="148" height="96" rx="10"/>
<text class="group-label" x="361" y="64">Application</text>
</g>
<g class="group group-tier" data-group="data">
<rect class="group-box" x="633" y="48" width="430" height="96" rx="10"/>
<text class="group-label" x="645" y="64">Data</text>
</g>
</g>
<g class="edges">
<path class="edge edge-sync" data-edge="web->api" data-kind="sync" d="M201 108 L361 108" marker-end="url(#arrow)"/>
<path class="flow" data-flow="web->api" data-load="0.7" d="M201 108 L349 108" style="stroke-width:3.6;animation-duration:1.3s"/>
<text class="edge-label" x="241" y="108">HTTPS</text>
<path class="edge edge-sync" data-edge="api->db" data-kind="sync" d="M485 108 L645 108" marker-end="url(#arrow)"/>
<path class="flow" data-flow="api->db" data-load="0.5" d="M485 108 L633 108" style="stroke-width:3;animation-duration:1.8s"/>
<text class="edge-label" x="525" y="108">writes</text>
<path class="edge edge-sync" data-edge="api-reads" data-kind="sync" d="M485 108 L850 108" marker-end="url(#arrow)"/>
<path class="flow" data-flow="api-reads" data-load="0.3" d="M485 108 L838 108" style="stroke-width:2.4;animation-duration:2.3s"/>
<text class="edge-label" x="525" y="108">reads</text>
<path class="edge edge-replication" data-edge="db->replica" data-kind="replication" d="M770 108 L850 108" marker-end="url(#arrow)"/>
<path class="flow" data-flow="db->replica" data-load="0.2" d="M770 108 L838 108" style="stroke-width:2.1;animation-duration:2.5s"/>
</g>
<g class="nodes">
<g class="node node-gateway" data-node="web" data-kind="gateway" data-state="on" transform="translate(84 84)">
<rect class="node-box" width="117" height="48" rx="8"/>
<g class="glyph" transform="translate(12 16)"><path d="M8 1.5l6.5 6.5L8 14.5 1.5 8z"/></g>
<text class="node-label" x="76.5" y="24">Web tier</text>
</g>
<g class="node node-service" data-node="api" data-kind="service" data-state="on" transform="translate(361 84)">
<rect class="node-box" width="124" height="48" rx="8"/>
<text class="node-label" x="62" y="24">Checkout API</text>
</g>
<g class="node node-database" data-node="db" data-kind="database" data-state="on" transform="translate(645 84)">
<rect class="node-box" width="125" height="48" rx="8"/>
<g class="glyph" transform="translate(12 16)"><ellipse cx="8" cy="4" rx="6" ry="2.5"/><path d="M2 4v8c0 1.4 2.7 2.5 6 2.5s6-1.1 6-2.5V4"/></g>
<text class="node-label" x="80.5" y="24">Orders DB</text>
</g>
<g class="node node-database" data-node="replica" data-kind="database" data-state="on" transform="translate(850 84)">
<rect class="node-box" width="201" height="48" rx="8"/>
<g class="glyph" transform="translate(12 16)"><ellipse cx="8" cy="4" rx="6" ry="2.5"/><path d="M2 4v8c0 1.4 2.7 2.5 6 2.5s6-1.1 6-2.5V4"/></g>
<text class="node-label" x="118.5" y="24">Orders DB (replica)</text>
</g>
</g>
</svg>
"
`;
